new features and ui enhancements